<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/im_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.qy.ccm.view.group.NavigationLucencyLayout
        android:id="@+id/nll_private_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_private_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_51"
        android:text="@string/imput_private_context"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_3"
        android:text="@string/imput_private_case"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />

    <EditText
        android:id="@+id/et_private_wallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/color_2A2E54"
        android:gravity="top"
        android:padding="@dimen/dp_10"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wallet_imput"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_39"
            android:layout_marginRight="@dimen/dp_21"
            android:layout_weight="1"
            android:background="@drawable/shape_bn_gt_oval_dp8"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/input_pr"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_wallet_reset"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_39"
            android:layout_weight="1"
            android:background="@drawable/shape_bn_gt_ova3_dp8"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/reset"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_wallet_what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/dp_30"
        android:text="@string/imput_private_what"
        android:textColor="@android:color/white" />


</LinearLayout>
