<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_161935"
    android:orientation="vertical">

    <com.qy.ccm.view.group.NavigationLucencyLayout
        android:id="@+id/add_wallet_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nll_input_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_31"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_input_wallet_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/add_wallet_new"
                android:gravity="center"
                android:text="@string/create_wallet"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_input_wallet_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@mipmap/add_wallet_import"
                android:gravity="center"
                android:text="@string/input_mn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_input_wallet_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@mipmap/add_wallet_import"
                android:gravity="center"
                android:text="@string/input_pr"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
