<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical">

    <com.qy.ccm.view.group.NavigationLucencyLayout
        android:id="@+id/nll_wallet_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nll_wallet_password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_51"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/input_transaction_password1"
        android:textColor="@android:color/white" />

    <com.qy.ccm.view.group.password.PayPwdEditText
        android:id="@+id/ppe_wallet_setpassword"
        android:layout_width="@dimen/dp_303"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/tv_password_input"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical" />


    <TextView
        android:id="@+id/tv_password_affirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ppe_wallet_setpassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/input_transaction_password2"
        android:textColor="@android:color/white" />

    <com.qy.ccm.view.group.password.PayPwdEditText
        android:id="@+id/ppe_wallet_affirmpassword"
        android:layout_width="@dimen/dp_303"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/tv_password_affirm"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical" />


    <TextView
        android:id="@+id/tv_password_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_39"
        android:layout_marginRight="@dimen/dp_39"
        android:layout_marginBottom="@dimen/dp_117"
        android:background="@drawable/shape_bn_gt_oval_dp8"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/affirm"
        android:textColor="@android:color/white" />

</RelativeLayout>
